# gestor_mantenimiento

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/consts/: colors.py  file_dir.py
src/controllers/: datafile_controller.py  equipment_controller.py  maintenance_controller.py  spare_controller.py  user_controller.py
src/controllers/sql/: base_sql.py  equipment_sql.py  maintenance_sql.py  schema.sql  spare_sql.py  user_sql.py
src/controllers/user/: session_controller.py  user_access_controller.py  user_controller.py
src/data/: registered_users.json
src/enums/: access_level.py  create_equipment_cases.py  create_maintenance_cases.py  create_spare_cases.py  register_cases.py
src/models/: equipment.py  maintenance.py  part.py  spare.py
src/models/users/: admin.py  base_user.py  supervisor.py  technician.py  user.py
src/utils/: config.py  encrypter.py  notification_handler.py  routes.py  session_handler.py
src/views/: __init__.py  not_found_view.py  welcome_page_view.py
src/views/admin/: worker_list_view.py  workers_list_view.py
src/views/general/: dashboard_view.py  inventory_view.py  profile_view.py
src/views/login/: login_view.py  register_view.py
src/views/supervisor/: piece.py  (+8 more)
src/widgets/: custom_button.py  custom_snack_bar.py  custom_text_field.py  dialog_button.py  equipment_card.py  equipment_details_dialog.py  filter_dialog.py  global_app_bar.py  global_navigation_bar.py  gradient_button.py  gradient_text.py  input_form.py  list_window.py  maintenance_details_dialog.py  spare_card.py  spare_details_dialog.py
