[project]
name = "Gestor mantenimiento"
version = "0.1.0"
description = "Aplicación creada para el manejo de tecnicos, mantenimientos y en general, logica empresarial"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Georges Chakour", email = "georgechakour2004@gmail.com" },
    { name = "Luis Álvarez", email = ""},
    { name = "Karina Huang", email = ""}
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.georxgi_Luigif10"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Gestor Mantenimiento"

# company name to display in about app dialogs
company = "USM students"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}